[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/World/WorldController.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/selectworldbg.png" type="Texture" id=5]
[ext_resource path="res://images/worldNameBanner.png" type="Texture" id=6]
[ext_resource path="res://images/lock.png" type="Texture" id=7]
[ext_resource path="res://images/playbtn.png" type="Texture" id=8]

[node name="WorldController" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.349, 301.616 )
scale = Vector2( 0.853, 0.502394 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 179.55, 78.8501 )
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 401.971
margin_top = 86.0
margin_right = 767.971
margin_bottom = 154.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
text = "SELECT WORLD
"
scroll_active = false

[node name="WorldBackground" type="Node" parent="."]

[node name="World1" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 82.0782, 152.029 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World1Banner" type="Sprite" parent="WorldBackground/World1"]
position = Vector2( 243.761, 410.444 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="World2" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 393.206, 152.029 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World2Banner" type="Sprite" parent="WorldBackground/World2"]
position = Vector2( 237.73, 410.444 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="World3" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 687.652, 152.029 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World3Banner" type="Sprite" parent="WorldBackground/World3"]
position = Vector2( 259.183, 410.444 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="World4" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 80.85, 379.778 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World4Banner" type="Sprite" parent="WorldBackground/World4"]
position = Vector2( 243.761, 409.668 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="World5" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 393.206, 379.778 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World5Banner" type="Sprite" parent="WorldBackground/World5"]
position = Vector2( 237.73, 409.668 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="World6" type="TouchScreenButton" parent="WorldBackground"]
position = Vector2( 687.652, 379.778 )
scale = Vector2( 0.409938, 0.409938 )
normal = ExtResource( 5 )

[node name="World6Banner" type="Sprite" parent="WorldBackground/World6"]
position = Vector2( 259.183, 409.668 )
scale = Vector2( 1.41182, 0.841582 )
texture = ExtResource( 6 )

[node name="WorldTitlesText" type="Node" parent="."]
editor/display_folded = true

[node name="World1Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 86.0
margin_top = 304.0
margin_right = 359.0
margin_bottom = 322.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="World2Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 394.0
margin_top = 304.0
margin_right = 670.0
margin_bottom = 322.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false
override_selected_font_color = true

[node name="World3Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 697.0
margin_top = 304.0
margin_right = 975.0
margin_bottom = 322.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="World4Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 84.0
margin_top = 532.0
margin_right = 359.0
margin_bottom = 550.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="World5Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 394.0
margin_top = 530.0
margin_right = 669.0
margin_bottom = 548.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="World6Title" type="RichTextLabel" parent="WorldTitlesText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 697.0
margin_top = 530.0
margin_right = 973.0
margin_bottom = 548.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/mono_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="WorldUnlockedStatus" type="Node" parent="."]
editor/display_folded = true

[node name="World1lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 182.272, 224.377 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="World2lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 494.737, 224.377 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="World3lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 789.474, 224.377 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="World4lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 178.948, 449.308 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="World5lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 488.089, 450.416 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="World6lock" type="Sprite" parent="WorldUnlockedStatus"]
visible = false
position = Vector2( 795.015, 450.416 )
scale = Vector2( 0.223078, 0.223078 )
texture = ExtResource( 7 )

[node name="WorldScore" type="Node" parent="."]
editor/display_folded = true

[node name="World1Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 88.0
margin_top = 229.693
margin_right = 465.0
margin_bottom = 296.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="World2Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 400.471
margin_top = 229.693
margin_right = 777.471
margin_bottom = 296.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="World3Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 694.367
margin_top = 229.693
margin_right = 1071.37
margin_bottom = 296.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="World4Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 88.0
margin_top = 457.693
margin_right = 465.0
margin_bottom = 524.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="World5Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 397.0
margin_top = 457.693
margin_right = 774.0
margin_bottom = 524.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="World6Score" type="RichTextLabel" parent="WorldScore"]
margin_left = 694.001
margin_top = 457.693
margin_right = 1071.0
margin_bottom = 524.693
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="WorldPlay" type="Node" parent="."]

[node name="World1Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 148, 208 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )

[node name="World2Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 460, 208 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )

[node name="World3Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 759.001, 208 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )

[node name="World4Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 148, 432 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )

[node name="World5Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 461, 432 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )

[node name="World6Play" type="TouchScreenButton" parent="WorldPlay"]
position = Vector2( 758.001, 432 )
scale = Vector2( 0.130858, 0.130858 )
normal = ExtResource( 8 )
